syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.paxier";
option java_outer_classname = "HelloWorldProto";

package toHelloWorld;

message HelloWorldRequest {
  string name = 1;
}

message HelloWorldResponse {
  string greeting = 1;
}

service HelloWorldService {
  rpc HelloWorld(HelloWorldRequest) returns (HelloWorldResponse);
}